@@ -7,12 +7,15 @@ Additions:
 * `#distinct` types can now be made over any type.
     - Used to be only primitives.
 * New `logo-new-256.ico` for favicon on website.
+* `u8.to_upper` and `u8.to_lower`
 
 Removals:
 
 Changes:
 * Undefined function imports in `onyx run` no longer cause an immediate error.
     - Instead, an error is produced when the function is called.
+* API for time remains the same, but reduced dependencies on external time things,
+    like strftime, localtime and mktime.
 
 Bugfixes:
 * Fixed missing `use core` in `optional.onyx`.
